# hief

./: .gitignore  .hiefignore  .rustfmt.toml  ACTIVE_CONTEXT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Clippy.toml  Justfile  LICENSE  MANIFESTO.md  README.md  SECURITY.md  TODO.md  cog.toml  hief.toml
.github/: copilot-agents.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.hief/: conventions.toml
.hief/golden/: smoke.toml
.hief/templates/: README.md  SDD_LLM_PROMPT.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: ARCHITECTURE.md  SCAFFOLDING.md
docs/harness/: harness-docs.md  simulation-playbook.md  ui-validation-artifacts.md
golden/: hief-codebase-health.toml  {{name}}.toml
scripts/: seed_ui_validation.sh
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  scope.rs
templates/: README.md  WORKFLOW_BLOCK.md  activity_feed.html  base.html  dashboard.html  review_panel.html  task_detail.html
tests/: test_config.rs  test_eval_gate.rs  test_eval_workflow.rs  test_groundedness.rs  test_install_platform.rs  test_intent_soft_locks.rs  test_mcp_validation.rs  test_protocol_router.rs  test_retrieval_weight_learning.rs  test_search_routing.rs  test_semantic_cache.rs  test_session_scope.rs  test_tool_events.rs  test_ui_dashboard.rs  test_ui_sse.rs  test_ui_task_detail.rs  test_ui_worktrees.rs
vscode-hief/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vscode-hief-0.1.0.vsix  vscode-hief-0.2.0.vsix
(+116 files in other folders)
