[package]
name = "hief"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
description = "Hybrid Intent-Evaluation Framework — a sidecar for AI coding agents"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "hief"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Identity & hashing
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }

# Database
libsql = "0.6"

# AST parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"

# Structural search (ast-grep pattern matching)
ast-grep-core = "0.35"


# MCP server
rmcp = { version = "0.17", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"

# Templating
minijinja = "2"

# File walking
ignore = "0.4"
glob = "0.3"

# Optional: embeddings
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
embeddings = ["dep:reqwest"]

[profile.release]
lto = true
strip = true
codegen-units = 1
